syntax = "proto3";

package addrbook;       //helps to prevent naming conflicts between different projects

message Person {
    optional string name = 1;
    optional int32 id = 2;
    optional string email = 3;
    enum NumberType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }
    message PhoneNumber {
        optional string number = 1;
        optional NumberType type = 2;
    }
    repeated PhoneNumber phones = 4;
}

message AddrBook {
    repeated Person people = 1;
}

message none {

}

service AddressBook {
    rpc AddPerson(Person) returns (Person);
    rpc ReadAddrBook(none) returns (stream Person);
}